--- a/form.html
+++ b/form.html
@@ -3,5 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./reset.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css" >
+
     <title>Codeasy form</title>
+</head>
+<body>
+    <header>
+        <div> <h1 class="titulo"><a href="./index.html"> Codeasy</a></h1></div>
+
+        </header>
+    <form class="row g-3 mx-auto mt-5">
+        <div class="col-md-6">
+          <label for="inputEmail4" class="form-label">Nome Completo</label>
+          <input type="email" class="form-control" id="inputEmail4" placeholder="Insira seu nome completo">
+        </div>
+        <div class="col-md-6">
+          <label for="inputPassword4" class="form-label">Username</label>
+          <input type="text" class="form-control" id="inputPassword4" placeholder="Escolha seu nome de usuário">
+        </div>
+        <div class="col-12">
+          <label for="inputAddress" class="form-label">Email</label>
+          <input type="text" class="form-control" id="inputAddress" placeholder="Insira seu e-mail">
+        </div>
+
+        <div class="col-md-6">
+          <label for="inputCity" class="form-label">Telefone para contato</label>
+          <input type="text" class="form-control" id="inputCity" placeholder="(000) 0 0000-0000">
+        </div>
+        <div class="col-md-4">
+          <label for="inputState" class="form-label">Responsável</label>
+          <select id="inputState" class="form-select">
+            <option selected>...</option>
+            <option>Pais ou responsáveis</option>
+            <option>Aluno</option>
+            <option>Instituição de ensino</option>
+          </select>
+        </div>
+        <div class="col-md-2">
+          <label for="inputZip" class="form-label">CPF</label>
+          <input type="text" class="form-control" id="inputZip" placeholder="000.000.000-00">
+        </div>
+        <div class="col-12">
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" id="gridCheck">
+            <label class="form-check-label" for="gridCheck">
+              Desejo receber informações no email e SMS
+            </label>
+          </div>
+        </div>
+        <div class="col-12">
+          <button type="submit" class="btn btn-primary">Cadastrar</button>
+        </div>
+      </form>
+</body>
