--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
 
 
 </div>
-<a href="./form.html"><button class="inscrever">inscreva-se</button></a>
+
+<div class="botao" ><a href="./form.html"><button class="inscrever">Inscreva-se</button></a>  </div>
+
 
 <footer>
     
