--- a/form.html
+++ b/form.html
@@ -17,7 +17,7 @@
     <form class="row g-3 mx-auto mt-5">
         <div class="col-md-6">
           <label for="inputEmail4" class="form-label">Nome Completo</label>
-          <input type="email" class="form-control" id="inputEmail4" placeholder="Insira seu nome completo">
+          <input type="text" class="form-control" id="inputEmail4" placeholder="Insira seu nome completo">
         </div>
         <div class="col-md-6">
           <label for="inputPassword4" class="form-label">Username</label>
@@ -30,7 +30,7 @@
 
         <div class="col-md-6">
           <label for="inputCity" class="form-label">Telefone para contato</label>
-          <input type="text" class="form-control" id="inputCity" placeholder="(000) 0 0000-0000">
+          <input type="number" class="form-control" id="inputCity" placeholder="(000) 0 0000-0000">
         </div>
         <div class="col-md-4">
           <label for="inputState" class="form-label">Responsável</label>
@@ -43,7 +43,7 @@
         </div>
         <div class="col-md-2">
           <label for="inputZip" class="form-label">CPF</label>
-          <input type="text" class="form-control" id="inputZip" placeholder="000.000.000-00">
+          <input type="text" class="form-control" id="inputZip" pattern="\d{3}\.\{3}\.\{3}\-\{2}\" placeholder="000.000.000-00">
         </div>
         <div class="col-12">
           <div class="form-check">
